--- a/Webapp/templates/about.html
+++ b/Webapp/templates/about.html
@@ -20,7 +20,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">AI Covid Detector</a>
+        <a class="navbar-brand" href="#">Movie Genre Prediction</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -52,26 +52,9 @@
       class="position-relative overflow-hidden p-3 p-md-2 m-md-3 text-center bg-light"
     >
       <div class="col-md-10 p-lg-5 mx-auto my-5">
-        <h5 class="display-5 fw-normal">AI Covid Detector</h5>
+        <h5 class="display-5 fw-normal">Movie Genre Prediction</h5>
         <p class="lead fw-normal">
-          It is known that the common symptoms of COVID-19 are fever, dry cough,
-          and tiredness. Other symptoms that people may experience include
-          aches, pains, or difficulty in breathing. Most of these symptoms show
-          signs of respiratory infections which can be detected by
-          radiologists.Thus, it is possible to use Deep Learning algorithms to
-          detect the disease from images of Chest X-rays. Automated applications
-          can be created to help support radiologists. So,this project aims to
-          detect Covid19 cases from the xray images.
-        </p>
-        <h5 class="display-5 fw-normal">Xception</h5>
-        <p class="lead fw-normal">
-          Xception is a convolutional neural network that is 71 layers deep. You
-          can load a pretrained version of the network trained on more than a
-          million images from the ImageNet database. The pretrained network can
-          classify images into 1000 object categories, such as keyboard, mouse,
-          pencil, and many animals. As a result, the network has learned rich
-          feature representations for a wide range of images. The network has an
-          image input size of 299-by-299.
+          This project aims at determinig the genre of the movie using its posters for image classifications CNNs are the most effective types of neural network in this project we try to create a CNN which would predict the genres of these movies.
         </p>
         <a class="btn btn-outline-secondary" href="movie.html"
           >Predict movie genre</a
